--- a/client/templates/game.html
+++ b/client/templates/game.html
@@ -1,5 +1,50 @@
 <template name="game">
-    <h1>Wowww!</h1>
+  <h1>Wowww!</h1>
     {{_id}}
     {{players}}
+
+  <div class="container-fluid text-center">
+    <!--<div class="row bg-warning">
+        <div class="col-xs-2" ng-repeat="index in [0,1,2,3,4]"
+             ng-class="{'bg-success': rounds[index] == true,'bg-danger': rounds[index] == false}">
+            {$ player_per_mission(index) $}
+        </div>
+        <div class="col-xs-2 btn bg-info" ng-click="revel_spy()">?</div>
+    </div>
+    <div class="row">
+        <div class="col-xs-2" ng-repeat="index in [1,2,3,4,5]"
+             ng-class="{'bg-danger': rejected_missions >= index}">
+            <p/>
+        </div>
+    </div>
+    -->
+    <div class="row">
+        {{#each players}}
+            {{>player}}
+          <div class="col-xs-4 btn btn-default"
+               ng-click="send_mission(player.user_id)"
+               ng-class="{'disabled': !can_select_players, 'btn-success': player.vote == true, 'btn-danger' : player.vote == false}">
+            <span class="glyphicon" ng-class="{'glyphicon-star': player.leader}"></span>
+            <span class="glyphicon" ng-class="{'glyphicon-chevron-up': player.mission}"></span>
+                    <span class="glyphicon"
+                          ng-class="{'glyphicon-user': spy && !player.spy,'glyphicon-sunglasses': spy && player.spy}"></span>
+            {$ player.name $}
+            <span class="glyphicon" ng-class="{'glyphicon-time': !player.connected}"></span>
+          </div>
+        {{/each}}
+    </div>
+    <div class="row">
+      <div class="col-xs-6 btn btn-default"
+           ng-class="{'btn-success': me().secret_vote == true,'disabled': !can_vote}"
+           ng-click="send_vote(true)">Approved
+      </div>
+      <div class="col-xs-6 btn btn-default"
+           ng-class="{'btn-danger': me().secret_vote == false, 'disabled': !can_vote}"
+           ng-click="send_vote(false)">Decline
+      </div>
+    </div>
+  </div>
+    {{game_key}}
+  <br>
+
 </template>
