more jade tests

--- a/client/head.jade
+++ b/client/head.jade
@@ -1,6 +1,6 @@
 head
   meta(charset="utf-8")
-  title= "Boardless Games"
+  title Boardless Games
   <!-- TODO -->
   meta(name="description" content="Boardless Games description.")
   meta(http-equiv="X-UA-Compatible" content="IE=edge")
