--- a/client/templates/game.jade
+++ b/client/templates/game.jade
@@ -5,6 +5,6 @@ template(name="game")
         +player
     .row
       .col-xs-6.btn.btn-default
-        | Approved
+        | Yes
       .col-xs-6.btn.btn-default
-        | Decline
+        | No
