--- a/client/templates/player.jade
+++ b/client/templates/player.jade
@@ -1,5 +1,5 @@
 template(name="player")
-  .col-xs-4.btn.btn-default.btn-player
+  .col-xs-4(class="#{playerClass}")
     if leader
       span.glyphicon.glyphicon-star
     if mission
