--- a/client/templates/home.jade
+++ b/client/templates/home.jade
@@ -4,7 +4,9 @@ template(name="home")
     +loginButtons
   .container.text-center
     .row
-      input.form-control(type="text" name="gameKey")
+      input.form-control.gameKeyInput(type="text")
     .row
-      button.col-xs-offset-1.col-xs-5.btn.btn-lg.btn-primary.btn-create(class="#{btnCreateClass}") Create
-      button.col-xs-5.btn.btn-lg.btn-primary.btn-join Join
+      button.col-xs-offset-1.col-xs-5.btn.btn-lg.btn-primary.btn-create(class="#{btnCreateClass}")
+        | Create
+      button.col-xs-5.btn.btn-lg.btn-primary.btn-join.disabled
+        | Join
