--- a/client/templates/traitor/game.jade
+++ b/client/templates/traitor/game.jade
@@ -1,12 +1,2 @@
 template(name="game")
-  .container-fluid.text-center
-    .row
-      +each players
-        +player
-    .row
-      .col-xs-6.btn.btn-default
-        | Yes
-      .col-xs-6.btn.btn-default
-        | No
-    +with game
-      | #{_id}
+ | is working!
