--- a/client/templates/join.jade
+++ b/client/templates/join.jade
@@ -10,10 +10,11 @@ template(name="join")
       if imGameMaster
         .col-xs-offset-3.col-xs-6.btn.btn-default.btn-start(class="#{btnStartClass}")
           | Start Game
-      else if canJoin
-        .col-xs-offset-3.col-xs-6.btn.btn-default.btn-join
-          | Join Game
       else
-        .col-xs-offset-3.col-xs-6
-          | Waiting for other players
-        #{startGame}
+        if canJoin
+          .col-xs-offset-3.col-xs-6.btn.btn-default.btn-join
+            | Join Game
+        else
+          .col-xs-offset-3.col-xs-6
+            | Waiting for other players
+        | #{startGame}
