--- a/client/templates/traitor/traitor.jade
+++ b/client/templates/traitor/traitor.jade
@@ -4,8 +4,11 @@ template(name="traitor")
       each players
         +player
     .row
-      if canVote
-        .col-xs-6.btn.btn-default.btn-yes
-          | Yes
-        .col-xs-6.btn.btn-default.btn-no
-          | No
+      if me.leader
+        if canStartMission
+          .col-xs-6.col-xs-offset-3.btn.btn-default.btn-strat-mission start mission
+        else
+          | Select #{playersPerMission} players
+      else if canVote
+        .col-xs-6.btn.btn-default.btn-yes Yes
+        .col-xs-6.btn.btn-default.btn-no No
