--- a/client/templates/traitor/traitor.jade
+++ b/client/templates/traitor/traitor.jade
@@ -9,6 +9,6 @@ template(name="traitor")
         .col-xs-6.btn.btn-default.btn-no No
       else if me.leader
         if canStartMission
-          .col-xs-6.col-xs-offset-3.btn.btn-default.btn-strat-mission start mission
+          .col-xs-6.col-xs-offset-3.btn.btn-default.btn-start-mission start mission
         else
           | Select #{playersPerMission} players
