--- a/client/templates/traitor/player.jade
+++ b/client/templates/traitor/player.jade
@@ -1,5 +1,5 @@
 template(name="player")
-  .col-xs-4(class="#{playerBtnClass}")
+  .col-xs-4(class="#{playerClass}")
     if leader
       span.glyphicon.glyphicon-star
     if mission
