basic game complete?

--- a/client/templates/traitor/traitor.jade
+++ b/client/templates/traitor/traitor.jade
@@ -1,7 +1,10 @@
 template(name="traitor")
   .container-fluid.text-center
     .row
-      | #{game.distrust_level}
+      | Distrust level: #{game.distrust_level}
+      | Game state: #{game.state}
+    .row
+
     .row
       each players
         +player
