--- a/client/templates/traitor/traitor.jade
+++ b/client/templates/traitor/traitor.jade
@@ -6,7 +6,7 @@ template(name="traitor")
       .col-xs-4
         | Game state: #{gameState}
       .col-xs-4.btn.btn-default.btn-identity.text-info
-        | Show identity
+        | #{identityLabel}
     .row
       | Players per mission: #{playersPerMissions}
     .row
