--- a/client/templates/game.jade
+++ b/client/templates/game.jade
@@ -1,6 +1,3 @@
 template(name="game")
   +loginButtons
-  if gameStarted
-    +traitor
-  else
-    +join
+  canvas(id="gameCanvas", width="800", height="600")
