--- a/client/head.jade
+++ b/client/head.jade
@@ -4,4 +4,4 @@ head
   meta(http-equiv="X-UA-Compatible" content="IE=edge")
   meta(name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimal-ui, maximum-scale=1, minimum-scale=1")
   link(href="//maxcdn.bootstrapcdn.com/bootswatch/latest/slate/bootstrap.min.css" rel="stylesheet")
-  script(src="//cdn.jsdelivr.net/phaser/2.4.2/phaser.min.js")
+  script(src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.4.2/custom/phaser-no-physics.min.js")
