--- a/client/head.jade
+++ b/client/head.jade
@@ -3,5 +3,5 @@ head
   title Boardless Games
   meta(http-equiv="X-UA-Compatible" content="IE=edge")
   meta(name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimal-ui, maximum-scale=1, minimum-scale=1")
-  link(href="https://maxcdn.bootstrapcdn.com/bootswatch/latest/slate/bootstrap.min.css" rel="stylesheet")
-  script(src="https://code.createjs.com/createjs-2015.05.21.min.js")
+  link(href="//maxcdn.bootstrapcdn.com/bootswatch/latest/slate/bootstrap.min.css" rel="stylesheet")
+  script(src="//code.createjs.com/createjs-2015.05.21.min.js")
