--- a/client/head.jade
+++ b/client/head.jade
@@ -3,4 +3,6 @@ head
   title Boardless Games
   meta(http-equiv="X-UA-Compatible" content="IE=edge")
   meta(name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimal-ui, maximum-scale=1, minimum-scale=1")
-  link(href="https://maxcdn.bootstrapcdn.com/bootswatch/latest/slate/bootstrap.min.css" rel="stylesheet")
+  link(href="//maxcdn.bootstrapcdn.com/bootswatch/latest/slate/bootstrap.min.css" rel="stylesheet")
+  link(href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css" rel="stylesheet")
+  script(src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js")
