--- a/client/templates/join.jade
+++ b/client/templates/join.jade
@@ -2,7 +2,7 @@ template(name="join")
   .container-fluid.text-center
     .row
       each players
-        .col-xs-3(class="#{playerClass}")
+        .col-xs-3.wow.fadeInDown(class="#{playerClass}")
           | #{name}
     .row
       if imGameMaster
