--- a/client/templates/home.jade
+++ b/client/templates/home.jade
@@ -6,7 +6,7 @@ template(name="home")
     .row
       input.form-control.gameKeyInput(type="text")
     .row
-      button.col-xs-offset-1.col-xs-5.btn.btn-lg.btn-primary.btn-create(class="#{btnCreateClass}")
+      button.col-xs-offset-1.col-xs-4.btn.btn-lg.btn-primary.btn-create(class="#{btnCreateClass}")
         | Create
-      button.col-xs-5.btn.btn-lg.btn-primary.btn-join.disabled
+      button.col-xs-offset-2.col-xs-4.btn.btn-lg.btn-primary.btn-join.disabled
         | Join
