--- a/client/templates/join.jade
+++ b/client/templates/join.jade
@@ -1,7 +1,7 @@
 template(name="join")
   .container-fluid.text-center
     each players
-      .col-xs-3.wow.fadeInDown(class="#{playerClass}")
+      .col-xs-3.animated.fadeInDown.player(class="#{playerClass}")
         .col-xs-offset-4.col-xs-4
           .circle
           | #{name}
