--- a/client/templates/join.jade
+++ b/client/templates/join.jade
@@ -7,9 +7,9 @@ template(name="join")
           | #{name}
     .row
       if imGameMaster
-        .col-xs-offset-3.col-xs-6.btn.btn-default.btn-start(class="#{btnStartClass}") Start Game
+        .col-xs-offset-3.col-xs-6.animated.fadeInUp.btn.btn-default.btn-start(class="#{btnStartClass}") Start Game
       else
         if canJoin
           .col-xs-offset-3.col-xs-6.btn.btn-default.btn-join Join Game
         else
-          .col-xs-offset-3.col-xs-6  Waiting for other players
+          .col-xs-offset-3.col-xs-6 Waiting for other players
