--- a/app/client/join/join.jade
+++ b/app/client/join/join.jade
@@ -4,7 +4,7 @@ template(name="join")
       .col-xs-3.animated.fadeInDown.player(class="#{playerClass}")
         .col-xs-offset-4.col-xs-4
           .circle
-          | #{this} ///TODO put name
+          | #{name}
     .row
       if imGameMaster
         .col-xs-offset-3.col-xs-6.animated.fadeInUp.btn.btn-default.btn-start(class="#{btnStartClass}") Start Game
