show your cards

--- a/game/love_letters/client/gameTemplate.jade
+++ b/game/love_letters/client/gameTemplate.jade
@@ -16,4 +16,6 @@ template(name="love_letters")
     .row
       .col-xs-offset-2.col-xs-3
         | Your card
-      .col-xs-2
+      each myCards
+        .col-xs-2
+          | #{this}
