--- a/game/love_letters/client/template.jade
+++ b/game/love_letters/client/template.jade
@@ -1,47 +1,47 @@
 template(name="love_letters")
   .container-fluid.text-center
-    .row
+    .row.btn-group(data-toggle="buttons")
       .col-xs-1
         | Played cards
       each cards
-        .col-xs-1
-          if myTurn
-            .radio
-              label
-                input(type="radio", name="cardRadio")
-                | #{this.name} : #{cardCount}
-          else
-            | #{this.name} : #{cardCount}
+        if myTurn
+          label.btn.btn-default
+            input(type='radio', name="cardRadio")
+            | #{this.name}
+            br
+            | #{cardCount}
+        else
+          .col-xs-1
+            | #{this.name}
+            br
+            | #{cardCount}
       .col-xs-1
         | discarded: ?
-    hr
-    .row
-      .col-xs-2
-        | Players
+    br
+    br
+    .row.btn-group(data-toggle="buttons")
       each players
-        .col-xs-offset-1.col-xs-2
-          if myTurn
-            .radio
-              label
-                input(type="radio", name="playerRadio")
-                | #{this.name}
-          else
+        if myTurn
+          label.btn.btn-default
+            input(type="radio", name="playerRadio")
             | #{this.name}
-        //TODO check if you can see his card
-    hr
-    .row
-      .col-xs-offset-2.col-xs-3
-        | Your card
+        else
+          .col-xs-2
+            | #{this.name}
+    br
+    br
+    | Your card
+    br
+    .row.btn-group(data-toggle="buttons")
       each myCards
-        .col-xs-2
-          if myTurn
-            .radio
-              label
-                input(type="radio", name="myCardRadio")
-                | #{this}
-          else
+        if myTurn
+          label.btn.btn-default
+            input(type="radio", name="myCardRadio")
             | #{this}
-    hr
+        else
+          .col-xs-offset-1.col-xs-2
+            | #{this}
+    br
     .row
       if myTurn
         .btn.btn-default.btn-play
