--- a/game/love_letters/client/template.jade
+++ b/game/love_letters/client/template.jade
@@ -8,9 +8,20 @@ template(name="love_letters")
           .row
             | #{value} - #{name} (#{amount}) : #{shortDesc}
       .screen.played-cards
-        | Played cards
+        .row.text-center
+          | Played cards
+        //img.row.center-block.img-responsive(src='1.jpg', style='margin-bottom:-290px')
+        //img.row.center-block.img-responsive(src='6.jpg', style='margin-bottom:-290px')
+        //img.row.center-block.img-responsive(src='4.jpg', style='margin-bottom:-290px')
+        each playedCards
+          img.row.center-block.img-responsive(src='#{this}.jpg', style='margin-bottom:-290px')
+        .margin(style='min-height:290px')
       .screen.hand-cards
-        | Hand Card(s)
+        .row.text-center
+          | Cards in the hand
+        .flipper.row.center-block
+          img.img-responsive(src='4.jpg', width="80%hw" height="80%vh")
+          img.img-responsive(src='2.jpg', width="80%hw" height="80%vh")
 
   //
     .container-fluid.text-center
