--- a/game/love_letters/client/love_letters_template.css
+++ b/game/love_letters/client/love_letters_template.css
@@ -1,10 +1,4 @@
-#screens {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-}
-
 .screen {
-    min-height: 100vh
+    min-height: 100vh;
+    width: 100vw;
 }
