--- a/game/love_letters/client/love_letters_template.css
+++ b/game/love_letters/client/love_letters_template.css
@@ -1,4 +1,12 @@
 .screen {
     min-height: 100vh;
-    width: 100vw;
+}
+
+#screens {
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
