--- a/game/love_letters/client/love_letters_template.css
+++ b/game/love_letters/client/love_letters_template.css
@@ -9,4 +9,11 @@
     bottom: 0;
     left: 0;
     width: 100%;
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -ms-touch-action: none;
 }
