--- a/game/love_letters/client/love_letters_template.jade
+++ b/game/love_letters/client/love_letters_template.jade
@@ -2,23 +2,19 @@ template(name="love_letters")
   #screens
     .empty-wrapper
       #list-of-cards.screen
-        .row.text-center
-          | List of Cards
+        .row.text-center List of Cards
         each gameCard
-          .row
-            | #{value} - #{name} (#{amount}) : #{shortDesc}
+          .row #{value} - #{name} (#{amount}) : #{shortDesc}
       #played-cards.screen
-        .row.text-center
-          | Played cards
-        //img.row.center-block.img-responsive(src='1.jpg', style='margin-bottom:-290px')
-        //img.row.center-block.img-responsive(src='6.jpg', style='margin-bottom:-290px')
-        //img.row.center-block.img-responsive(src='4.jpg', style='margin-bottom:-290px')
+        .row.text-center Played cards
+        img.row.center-block.img-responsive(src='1.jpg', style='margin-bottom:-290px')
+        img.row.center-block.img-responsive(src='6.jpg', style='margin-bottom:-290px')
+        img.row.center-block.img-responsive(src='4.jpg', style='margin-bottom:-290px')
         each playedCards
           img.row.center-block.img-responsive(src='#{this}.jpg', style='margin-bottom:-290px')
         .margin(style='min-height:290px')
       #hand.screen
-        .row.text-center
-          | Cards in the hand
+        .row.text-center Cards in the hand
         .flipper.row.center-block
           img.img-responsive(src='4.jpg')
           img.img-responsive(src='2.jpg')
