--- a/game/love_letters/client/love_letters_template.css
+++ b/game/love_letters/client/love_letters_template.css
@@ -17,3 +17,14 @@
     user-select: none;
     -ms-touch-action: none;
 }
+
+.card.selected img {
+    border: lime;
+    border-width: medium;
+    border-style: dotted;
+}
+
+.player .btn{
+    padding-left: 50px;
+    padding-right: 50px;
+}
