fix issue when selectin a card

--- a/game/love_letters/client/love_letters_template.jade
+++ b/game/love_letters/client/love_letters_template.jade
@@ -28,33 +28,41 @@ template(name="love_letters")
       #card-selection.screen
         .row.text-center Select a Card
         .row
-          .col-xs-5.col-xs-offset-1.card
-            img.center-block.img-responsive(src='1.jpg', style='height:24vh')
-            input(type='hidden', value='1')
-          .col-xs-5.col-xs-offset-1.card
-            img.center-block.img-responsive(src='2.jpg', style='height:24vh')
-            input(type='hidden', value='2')
+          .col-xs-6
+            .card
+              img.center-block.img-responsive(src='1.jpg', style='height:24vh')
+              input(type='hidden', value='1')
+          .col-xs-6
+            .card
+              img.center-block.img-responsive(src='2.jpg', style='height:24vh')
+              input(type='hidden', value='2')
         .row
-          .col-xs-5.col-xs-offset-1.card
-            img.center-block.img-responsive(src='3.jpg', style='height:24vh')
-            input(type='hidden', value='3')
-          .col-xs-5.col-xs-offset-1.card
-            img.center-block.img-responsive(src='4.jpg', style='height:24vh')
-            input(type='hidden', value='4')
+          .col-xs-6
+            .card
+              img.center-block.img-responsive(src='3.jpg', style='height:24vh')
+              input(type='hidden', value='3')
+          .col-xs-6
+            .card
+              img.center-block.img-responsive(src='4.jpg', style='height:24vh')
+              input(type='hidden', value='4')
         .row
-          .col-xs-5.col-xs-offset-1.card
-            img.center-block.img-responsive(src='5.jpg', style='height:24vh')
-            input(type='hidden', value='5')
-          .col-xs-5.col-xs-offset-1.card
-            img.center-block.img-responsive(src='6.jpg', style='height:24vh')
-            input(type='hidden', value='6')
+          .col-xs-6
+            .card
+              img.center-block.img-responsive(src='5.jpg', style='height:24vh')
+              input(type='hidden', value='5')
+          .col-xs-6
+            .card
+              img.center-block.img-responsive(src='6.jpg', style='height:24vh')
+              input(type='hidden', value='6')
         .row
-          .col-xs-5.col-xs-offset-1.card
-            img.center-block.img-responsive(src='7.jpg', style='height:24vh')
-            input(type='hidden', value='7')
-          .col-xs-5.col-xs-offset-1.card
-            img.center-block.img-responsive(src='8.jpg', style='height:24vh')
-            input(type='hidden', value='8')
+          .col-xs-6
+            .card
+              img.center-block.img-responsive(src='7.jpg', style='height:24vh')
+              input(type='hidden', value='7')
+          .col-xs-6
+            .card
+              img.center-block.img-responsive(src='8.jpg', style='height:24vh')
+              input(type='hidden', value='8')
   //
     .container-fluid.text-center
       .row.btn-group(data-toggle="buttons")
