color code for turn out and protected

--- a/game/love_letters/client/love_letters_template.css
+++ b/game/love_letters/client/love_letters_template.css
@@ -18,6 +18,18 @@
     -ms-touch-action: none;
 }
 
+.protected {
+    background: darkcyan;
+}
+
+.out {
+    background: darkred;
+}
+
+.turn {
+    background: darkgreen;
+}
+
 .card.selected img {
     border: lime;
     border-width: medium;
