--- a/game/love_letters/client/love_letters_template.jade
+++ b/game/love_letters/client/love_letters_template.jade
@@ -9,6 +9,8 @@ template(name="love_letters")
         .row.text-center Played cards
         each playedCards
           img.row.center-block.img-responsive(src='#{this}.jpg', style='margin-bottom:-290px')
+        with dontHave
+          img.row.center-block.img-responsive(src='#{this}.jpg', style='margin-bottom:-290px; transform: rotate(90deg)')
         .margin(style='min-height:290px')
       #hand.screen
         .row.text-center Cards in the hand
