--- a/game/love_letters/client/love_letters_template.jade
+++ b/game/love_letters/client/love_letters_template.jade
@@ -6,7 +6,7 @@ template(name="love_letters")
         each gameCard
           .row #{value} - #{name} (#{amount}) : #{shortDesc}
       #played-cards.screen(class="#{actionClass}")
-        .row.text-center Played cards
+        .row.text-center Played cards     Won Rounds:#{wonRounds}
         each playedCards
           img.row.center-block.img-responsive(src='#{this}.jpg', style='margin-bottom:-290px')
         with dontHave
