show winner player

--- a/game/love_letters/client/love_letters_template.css
+++ b/game/love_letters/client/love_letters_template.css
@@ -30,6 +30,10 @@
     background: darkgreen;
 }
 
+.winner {
+    background: yellow;
+}
+
 .card.selected img {
     border: lime;
     border-width: medium;
