friendly accounts working!! :)

--- a/app/client/layout/layout.html
+++ b/app/client/layout/layout.html
@@ -1,7 +1,8 @@
 <template name="layout">
   {{#if currentUser}}
     <div class="user">
-      <span> {{currentUser.username}} </span>
+      <span>id: {{currentUser._id}} </span>
+      <span>username: {{currentUser.username}} </span>
       <a href="#" class="logout">Logout</a>
     </div>
   {{/if}}
