creating the new home

--- a/app/client/layout/layout.html
+++ b/app/client/layout/layout.html
@@ -8,4 +8,7 @@
   {{/if}}
 
   {{> yield}}
+
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  {{> yield "scripts"}}
 </template>
