--- a/app/client/layout/layout.html
+++ b/app/client/layout/layout.html
@@ -9,6 +9,6 @@
 
   {{> yield}}
 
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
   {{> yield "scripts"}}
 </template>
